--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>SunsUpSolar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Find out how you can save money and pollution by installing Solar PV and and Solar Hot Water Systems. On and off grid, Northern California.">
+  <meta name="keywords" content="santa cruz,solar panels, santa cruz solar,solar  installer,solar installer santa cruz,solar contractor,solar contractor santa cruz, residential solar,commercial solar,solar hot water,solar electric, photovoltaic, solar solutions, turn key,solar monterey,solar power santa cruz, solar panels scotts valley,green energy,solar financing,renewable energy,solar panel,solar,suns up solar,solar santa cruz county,solar pv santa cruz,solar pv scotts valley">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
