Converted to bootstrap 3rc2

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,14 @@
  *= require_self
  *= require_tree .
  */
+body{
+  background-image: -webkit-gradient(radial, center bottom, 0, center bottom, 561, color-stop(0, #FFFFFF), color-stop(1, #EFAA0A));
+}
+#banner{
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #EBEBEB));
+}
+#navbar{
+  background-color: white;
+  padding: 1%;
+  overflow: hidden;
+}
