--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>SunsUpSolar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +7,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Find out how you can save money and pollution by installing Solar PV and and Solar Hot Water Systems. On and off grid, Northern California.">
   <meta name="keywords" content="santa cruz,solar panels, santa cruz solar,solar  installer,solar installer santa cruz,solar contractor,solar contractor santa cruz, residential solar,commercial solar,solar hot water,solar electric, photovoltaic, solar solutions, turn key,solar monterey,solar power santa cruz, solar panels scotts valley,green energy,solar financing,renewable energy,solar panel,solar,suns up solar,solar santa cruz county,solar pv santa cruz,solar pv scotts valley">
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "bootstrap.min.css", "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <!-- banner and nav -->
+<div class="navbar-fixed-top">
+  <div class="row" id="banner">
+    <div class="col-xs-10 col-md-offset-1">
+      <img class="img-responsive pull-left hidden-xs" id="logo" alt="Responsive Image" src="/assets/logo_no_text.png"/>
+      <h1 class="hidden-xs">Suns Up Solar</h1>
+      <h3 class="visible-xs">Suns Up Solar</h3>
+    </div>
+  </div>
+  <div class"row" id="navbar">
+    <div class="col-xs-10 col-md-offset-1">
+      <ul class="nav nav-pills">
+        <li class="active"> <a href="#">Home            </a></li>
+        <li>                <a href="#">Solar Technology</a></li>
+        <li>                <a href="#">Residential     </a></li>
+        <li>                <a href="#">Commercial      </a></li>
+        <li>                <a href="#">About Us        </a></li>
+        <li>                <a href="#">News            </a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 
 <%= yield %>
 
