--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,21 +1,3 @@
-<!-- banner and nav -->
-<div class="navbar-fixed-top">
-  <div class="row-fluid" id="banner">
-    <div class="span10 offset1">
-      <img class="pull-left hidden-phone" id="logo" alt="Logo" src="/assets/logo_no_text.png"/>
-      <h1>Suns Up Solar</h1>
-    </div>
-  </div>
-  <div class"row-fluid" id="navbar">
-    <div class="span10 offset1">
-      <ul class="nav nav-pills">
-        <li class="active"> <a href="#">Home            </a></li>
-        <li>                <a href="#">Solar Technology</a></li>
-        <li>                <a href="#">Residential     </a></li>
-        <li>                <a href="#">Commercial      </a></li>
-        <li>                <a href="#">About Us        </a></li>
-        <li>                <a href="#">News            </a></li>
-      </ul>
-    </div>
-  </div>
+<div class="container">
+
 </div>
