--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,21 @@
-<div class="container">
+<div class="jumbotron">
+  <div class="container">
+    <h1>Energy independance.... for less.</h1>
+    <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+  </div>
+</div>
 
+<div class="row">
+  <div class="col-xs-3">
+    <img src="/assets/home-circle-decisions.png" alt="image">
+  </div>
+    <div class="col-xs-3">
+    <img src="/assets/home-circle-engage.png" alt="image">
+  </div>
+    <div class="col-xs-3">
+    <img src="/assets/home-circle-engage2.png" alt="image">
+  </div>
+    <div class="col-xs-3">
+    <img src="/assets/home-circle-optimize.png" alt="image">
+  </div>
 </div>
