--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Suns Up solar</a>
+    <a class="navbar-brand" href="#">Suns Up Solar</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,8 +58,11 @@
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
+<div class="container" id="main_container">
 
 <%= yield %>
+
+</div>
 
 </body>
 </html>
