--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,3 +29,6 @@ margin-top: 162px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
+#footer{
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #EBEBEB), color-stop(1, #FFFFFF));
+}
