Nav h1 margin and contact button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,10 @@
   <div class="row" id="banner">
     <div class="col-xs-10 col-md-offset-1">
       <img class="img-responsive pull-left hidden-xs" id="logo" alt="Responsive Image" src="/assets/logo_no_text.png"/>
+      <div class="col-xs-4">
       <h1>Suns Up Solar</h1>
+      </div>
+      <button type="button" class="btn btn-info pull-right" id="contact_button">Get In Touch</button>
     </div>
   </div>
   <div class"row" id="navbar">
@@ -33,6 +36,7 @@
     </div>
   </div>
 </nav>
+
 
 <nav class="navbar navbar-default visible-xs" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
