--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,3 +32,10 @@ margin-top: 162px;
 #footer{
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #EBEBEB), color-stop(1, #FFFFFF));
 }
+#contact_button{
+  margin-top: 33px;
+}
+.navbar-fixed-top h1{
+  margin-top: 30px;
+  margin-bottom: :30px;
+}
