Front page nearly done

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,22 +6,22 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-3">
+  <div class="col-xs-3 boxes">
     <img src="/assets/home-circle-decisions.png" alt="image">
     <h3>Save Money</h3>
     <p>Lower your energy costs with solar electrical and hot water systems</p>
   </div>
-    <div class="col-xs-3">
+    <div class="col-xs-3 boxes">
     <img src="/assets/home-circle-engage.png" alt="image">
     <h3>Go Green</h3>
     <p>Take responsibility for doing your part to lower carbon emissions.</p>
   </div>
-    <div class="col-xs-3">
+    <div class="col-xs-3 boxes">
     <img src="/assets/home-circle-engage2.png" alt="image">
     <h3>Energy Independance</h3>
     <p>Live off the grid, or simply help save lives overseas.</p>
   </div>
-    <div class="col-xs-3">
+    <div class="col-xs-3 boxes">
     <img src="/assets/home-circle-optimize.png" alt="image">
     <h3>Low Maintenance</h3>
     <p>Quiet, dependable and reliable systems</p>
