--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,8 +11,12 @@
  *= require_self
  *= require_tree .
  */
+
 body{
   background-image: -webkit-gradient(radial, center bottom, 0, center bottom, 561, color-stop(0, #FFFFFF), color-stop(1, #EFAA0A));
+}
+nav{
+  box-shadow: 5px 0px 7px gray;
 }
 #banner{
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #EBEBEB));
@@ -23,19 +27,27 @@ body{
   overflow: hidden;
 }
 #main_container{
-margin-top: 162px;
+margin-top: 192px;
 }
 .jumbotron{
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  box-shadow: 0px 0px 7px gray;
 }
 #footer{
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #EBEBEB), color-stop(1, #FFFFFF));
+  box-shadow: -5px 0px 7px gray;
+  margin-top: 30px;
+  padding-top: 30px;
 }
 #contact_button{
   margin-top: 33px;
+  box-shadow: 2px 2px 7px gray;
 }
 .navbar-fixed-top h1{
   margin-top: 30px;
   margin-bottom: :30px;
+}
+.boxes{
+  text-align: center;
 }
