--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,34 +69,36 @@
 </div>
 
 <footer id="footer">
-  <div class="row">
-    <div class="col-xs-3">
-      <h4>Column 1</h4>
-      <p>something</p>
-      <p>something</p>
-      <p>something</p>
-      <p>something</p>
-    </div>
-    <div class="col-xs-3">
-      <h4>Column 2</h4>
-      <p>something</p>
-      <p>something</p>
-      <p>something</p>
-      <p>something</p>
-    </div>
-    <div class="col-xs-3">
-      <h4>Column 3</h4>
-      <p>something</p>
-      <p>something</p>
-      <p>something</p>
-      <p>something</p>
-    </div>
-    <div class="col-xs-3">
-      <h4>Column 4</h4>
-      <p>something</p>
-      <p>something</p>
-      <p>something</p>
-      <p>something</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-3">
+        <h4>Column 1</h4>
+        <p>links</p>
+        <p>links</p>
+        <p>links</p>
+        <p>links</p>
+      </div>
+      <div class="col-xs-3">
+        <h4>Column 2</h4>
+        <p>links</p>
+        <p>links</p>
+        <p>links</p>
+        <p>links</p>
+      </div>
+      <div class="col-xs-3">
+        <h4>Column 3</h4>
+        <p>links</p>
+        <p>links</p>
+        <p>links</p>
+        <p>links</p>
+      </div>
+      <div class="col-xs-3">
+        <h4>Column 4</h4>
+        <p>links</p>
+        <p>links</p>
+        <p>links</p>
+        <p>links</p>
+      </div>
     </div>
   </div>
 </footer>
