Jumbrotron switched to cycle.js

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,37 +1,39 @@
-<div class="jumbotron" id="jumbotron1">
-  <div class="container">
-    <h1>Energy independance.... for less.</h1>
-    <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+<div class="slideshow">
+  <div class="jumbotron" id="jumbotron1">
+    <div class="container">
+      <h1>Energy independence.... for less.</h1>
+      <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+    </div>
+  </div>
+
+  <div class="jumbotron" id="jumbotron2">
+    <div class="container">
+      <h1>Energy independence.... for less.</h1>
+      <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+    </div>
+  </div>
+
+  <div class="jumbotron" id="jumbotron3">
+    <div class="container">
+      <h1>Energy independence.... for less.</h1>
+      <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+    </div>
+  </div>
+
+  <div class="jumbotron" id="jumbotron4">
+    <div class="container">
+      <h1>Energy independence.... for less.</h1>
+      <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+    </div>
+  </div>
+
+  <div class="jumbotron" id="jumbotron5">
+    <div class="container">
+      <h1>Energy independence.... for less.</h1>
+      <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+    </div>
   </div>
 </div>
-
-<!-- <div class="jumbotron" id="jumbotron2">
-  <div class="container">
-    <h1>Energy independance.... for less.</h1>
-    <p><a class="btn btn-primary btn-lg">Learn more</a></p>
-  </div>
-</div>
-
-<div class="jumbotron" id="jumbotron3">
-  <div class="container">
-    <h1>Energy independance.... for less.</h1>
-    <p><a class="btn btn-primary btn-lg">Learn more</a></p>
-  </div>
-</div>
-
-<div class="jumbotron" id="jumbotron4">
-  <div class="container">
-    <h1>Energy independance.... for less.</h1>
-    <p><a class="btn btn-primary btn-lg">Learn more</a></p>
-  </div>
-</div>
-
-<div class="jumbotron" id="jumbotron5">
-  <div class="container">
-    <h1>Energy independance.... for less.</h1>
-    <p><a class="btn btn-primary btn-lg">Learn more</a></p>
-  </div>
-</div> -->
 
 <div class="row">
   <div class="col-xs-3 boxes">
