--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,11 +29,28 @@ nav{
 #main_container{
 margin-top: 192px;
 }
+#slideshow{
+  width: 100%;
+}
 .jumbotron{
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  background-color: rgba(255, 255, 255, 0.0);  /*override bootstrap's gray default*/
   box-shadow: 0px 0px 7px gray;
+}
+#jumbotron1{
+  background-image: url('grass.jpg');
+}
+#jumbotron2{
+  background-image: url('sun.jpg');
+}
+#jumbotron3{
+  background-image: url('panels.jpg');
+}
+#jumbotron4{
+  background-image: url('home.jpg');
+}
+#jumbotron5{
+  background-image: url('holding_sun.jpg');
 }
 #footer{
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #EBEBEB), color-stop(1, #FFFFFF));
