--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,8 @@
   </div><!-- /.navbar-collapse -->
 </nav>
 <div class="container" id="main_container">
+  <div class="hidden-xs" id="container_spacer">  <!-- this keeps the body content from getting hidden by the nav -->
+  </div>
 
 <%= yield %>
 
