--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
+    <img class="img-responsive pull-left visible-xs" id="logo_small" alt="Responsive Image" src="/assets/logo_no_text.png"/>
     <a class="navbar-brand" href="#">Suns Up Solar</a>
   </div>
 
