--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>SunsUpSolar</title>
+  <title>Suns Up Solar | <%= yield(:title) %> </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
