--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,12 @@
   <div class"row" id="navbar">
     <div class="col-xs-10 col-md-offset-1">
       <ul class="nav nav-pills">
-        <li class="active"> <%= link_to 'Home', '#' %>              </li>
-        <li>                <%= link_to 'Learn About Solar', '#' %> </li>
-        <li>                <%= link_to 'Residential', '#' %>       </li>
-        <li>                <%= link_to 'Commercial', '#' %>        </li>
-        <li>                <%= link_to 'About Us', '#' %>          </li>
-        <li>                <%= link_to 'News', '#' %>              </li>
+        <li class="active"> <%= link_to 'Home',              root_path        %> </li>
+        <li>                <%= link_to 'Learn About Solar', tech_path        %> </li>
+        <li>                <%= link_to 'Residential',       residential_path %> </li>
+        <li>                <%= link_to 'Commercial',        commercial_path  %> </li>
+        <li>                <%= link_to 'About Us',          about_path       %> </li>
+        <li>                <%= link_to 'News',              news_path        %> </li>
       </ul>
     </div>
   </div>
