--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#pete{
+  height: 25%;
+  float: right;
+  width: 25%;
+}
+#ian{
+  height: 25%;
+  float: right;
+  width: 25%;
+}
+#tony{
+  height: 25%;
+  float: right;
+  width: 25%;
+}
