--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta http-equiv="cache-control" content="no-cache">
   <%= render '/layouts/header.html.erb' %>
 </head>
 <body>
