--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,24 +37,24 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" id="boxes_container">
   <div class="col-xs-3 boxes">
-    <img src="/assets/home-circle-decisions.png" alt="image">
+    <img src="/assets/save_money.jpg" alt="image" class="img-circle">
     <h3>Save Money</h3>
     <p>Lower your energy costs with solar electrical and hot water systems</p>
   </div>
     <div class="col-xs-3 boxes">
-    <img src="/assets/home-circle-engage.png" alt="image">
+    <img src="/assets/go_green.jpg" alt="image" class="img-circle">
     <h3>Go Green</h3>
     <p>Take responsibility for doing your part to lower carbon emissions.</p>
   </div>
     <div class="col-xs-3 boxes">
-    <img src="/assets/home-circle-engage2.png" alt="image">
+    <img src="/assets/energy_independance.jpg" alt="image" class="img-circle">
     <h3>Energy Independance</h3>
     <p>Live off the grid, or simply help save lives overseas.</p>
   </div>
     <div class="col-xs-3 boxes">
-    <img src="/assets/home-circle-optimize.png" alt="image">
+    <img src="/assets/low_maintenance.jpg" alt="image" class="img-circle">
     <h3>Low Maintenance</h3>
     <p>Quiet, dependable and reliable systems</p>
   </div>
