--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,6 +39,7 @@ nav{
   margin-top: 30px;
   margin-bottom: 0px;
   padding-top: 10px;
+  padding-bottom: 30px;
 }
 #company_info p{
   margin-bottom: 0px;
