--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,5 +1,5 @@
-#slideshow{
-  width: 100%;
+.slideshow{
+  margin: auto;
 }
 .jumbotron{
   background-repeat: no-repeat;
@@ -29,10 +29,8 @@
   margin-top: 30px;
   margin-bottom: :30px;
 }
-#boxes_container{
-  margin-top: 20px;
-}
 .boxes{
+  margin: 20px auto 20px auto;
   text-align: center;
 }
 .img-circle{
