--- a/app/views/static_pages/residential.html.erb
+++ b/app/views/static_pages/residential.html.erb
@@ -2,11 +2,258 @@
 
 <p> much of this text in the original site is the same text as the home page.  I suggest coming up with content that speaks directly to home owner.</p>
 
-  <ul>
-    <li>Tax breaks</li>
-    <li>Saving money example</li>
-    <li>project images</li>
-    <li>what its like to live with solar</li>
-    <li>the process from contacting you to completion with timelines.</li>
-    <li>a few testimonials</li>
+<ul>
+  <li>Tax breaks</li>
+  <li>Saving money example</li>
+  <li>project images</li>
+  <li>what its like to live with solar</li>
+  <li>the process from contacting you to completion with timelines.</li>
+  <li>a few testimonials</li>
+</ul>
+
+<h2>Case Studies</h2>
+<div class="tabbable">
+  <ul class="nav nav-tabs">
+    <li class="active"><a href="#case1" data-toggle="tab">Santa Cruz - 7.9kW</a></li>
+    <li><a href="#case2" data-toggle="tab">Santa Cruz - 5.0kW</a></li>
+    <li><a href="#case3" data-toggle="tab">Salinas - 5.4kW</a></li>
+    <li><a href="#case4" data-toggle="tab">Soquel - 6.3kW</a></li>
+    <li><a href="#case5" data-toggle="tab">Aptos - 3.1kW</a></li>
+    <li><a href="#case6" data-toggle="tab">Sunnyvale - 5.4kW</a></li>
+    <li><a href="#case7" data-toggle="tab">Monterey County - 7.36kW</a></li>
   </ul>
+  <div class="tab-content">
+    <div class="tab-pane active" id="case1">
+      <h4>Santa Cruz -Residence Case Study</h4>
+      <table>
+        <tr>
+          <td>Customer needs: Reduce energy bill</td>
+          <td>Existing PG&E bill: $600+/month</td>
+        </tr>
+        <tr>
+          <td>System Size: 7.92kW</td>
+          <td>kWh production: 10,220kWh/year</td>
+        </tr>
+        <tr>
+          <td>Payback: 4.6 years</td>
+          <td>Energy bill with Solar: $50/month</td>
+        </tr>
+      </table>
+
+      <p>The customers needs were to reduce their PG&E electric bills as they were in excess of $600 per month.</p>
+
+      <%= image_tag("ObertoGarageArrays.jpg", alt: "Santa Cruz Array Image") %>
+
+      <p>The solar pv system installed consisted of 36 220W solar panels in two arrays of 22 & 14 panels. The two roof mounted arrays faced South South West and South respectively. These arrays were served by two SMA inverters.</p>
+
+      <p>The system produces 10,220kWh per year and reduces carbon emissions by 182 tons over the systems lifetime. That's equivalent to over 375,600 air miles or 52 return flights between  San Francisco and London!!</p>
+
+      <p>Their average electric bill is now $50</p>
+
+      <em><p>"I used to dread the time of the month when my PG&E bill arrived. Now I can't wait!"</p>
+
+      <p>"Peter and his SUNS UP SOLAR team were first class they were here during the hottest part of the year, but worked hard and finished in 3 days.!! The guys always cleaned up after themselves and nothing was too much trouble. They replaced my comp roof as well while they were up there as it was over 16 years old."</p>
+
+      <p>"I have recommended SUNS UP SOLAR to all of my friends"</p>
+
+      <p>Victor O Santa Cruz</p></em>
+    </div>
+    <div class="tab-pane" id="case2">
+      <h4>Santa Cruz - Residence Case Study</h4>
+      <table>
+        <tr>
+          <td>Customers needs: Reduce energy bill</td>
+          <td>Existing PG&E bill: $270+/month</td>
+        </tr>
+        <tr>
+          <td>System Size: 5.04kW</td>
+          <td>kWh production: 11,760kWh/year</td>
+        </tr>
+        <tr>
+          <td>Payback: 7.5 years</td>
+          <td>Energy bill with Solar: $20/month</td>
+        </tr>
+      </table>                             
+
+      <%= image_tag("santacruz50.jpg", alt: "Santa Cruz Array Image") %>                                       
+
+      <p>The customers needs were to reduce their PG&E electric bills as they were in excess of $270 per month.</p>
+
+      <p>The solar pv system installed consisted of 124 210W Schuco solar panels which were roof mounted and faced South west. These arrays were served by one SMA inverter.</p>
+
+      <p>The system produces in excess of 11,700kWh per year and will reduce carbon emissions by 200 tons over the systems lifetime. </p>
+
+      <p>Their average electric bill is now $20</p>
+
+      <em><p>"We are stoked, we love our new system. It's important to us to help the environment and we also love our PG&E bills now!!"</p>
+
+      <p>Janet B Santa Cruz</p></em>
+    </div>
+    <div class="tab-pane" id="case3">
+      <h4>Salinas - Residence Case Study</h4>
+      <table>
+        <tr>
+          <td>Customers needs: Reduce energy bill</td>
+          <td>Existing PG&E bill: $400+/month</td>
+        </tr>
+        <tr>
+          <td>System Size: 5.46kW</td>
+          <td>kWh production: 6,660kWh/year</td>
+        </tr>
+        <tr>
+          <td>Payback: 5.5 years</td>
+          <td>Energy bill with Solar: $45/month</td>
+        </tr>
+      </table>                             
+
+      <p>The customers needs were to reduce their PG&E electric bills as they were in excess of $600 per month.
+
+      <%= image_tag("salinas54.jpg", alt: "Salinas Array Image") %>
+
+      <p>The difficulty with this site, however, was a large stand of eucalyptus trees which prevented us utilizing the South facing roof. The solution was to locate the two arrays on the East, South East roof maximising the production for the owner.</p>
+
+      <p>There is a misconception that solar arrays must face south. Obviously it is ideal but an East facing array will harvest approximately 87% of the same array facing South. So if a customer really wants to go solar we just have to size the system accordingly.</p>
+
+      <p>The solar pv system installed consisted of 26 210W Schuco solar panels in two arrays of 13 panels. The two roof mounted arrays faced East South East. These arrays were served by one SMA inverter.</p>
+
+      <p>The system produces in excess of 6,600kWh per year and will reduce carbon emissions by 116 tons over the systems lifetime. That’s equivalent to 147,500 SUV miles.</p>
+
+      <p>Their average electric bill is now $45</p>
+
+      <em><p>"We love our new system!! I think we will do the same for our hot water next year”</p>
+
+      <p>“A friend referred us to SUNS UP SOLAR they were great and responded to every question or concern I had immediately” </p>
+
+      <p>Mike M</p></em>
+    </div>
+    <div class="tab-pane" id="case4">
+      <h4>Soquel - Residence Case Study</h4>
+      <table>
+        <tr>
+          <td>Customers needs: Reduce energy bill</td>
+          <td>Existing PG&E bill: $700+/month</td>
+        </tr>
+        <tr>
+          <td>System Size: 6.62kW</td>
+          <td>kWh production: 20,450kWh/year</td>
+        </tr>
+        <tr>
+          <td>Payback: 3.75 years</td>
+          <td>Energy bill with Solar: $65/month</td>
+        </tr>
+      </table>                             
+
+      <%= image_tag("soquel63.jpg", alt: "Soquel Array Image") %>
+                                                
+      <p>The customers needs were to reduce their PG&E electric bills as they were in excess of $700 per month.</p>
+
+      <p>The roof mounted array of 32 panels faced South and are located on the roof of the first hay bale structure in Santa Cruz County.</p>
+
+      <p>The solar pv system installed consisted of 32 210W Schuco solar panels in a single array. This array is served by one SMA inverter.</p>
+
+      <p>The system produces in excess of 20,400kWh per year and will reduce carbon emissions by 350 tons over the systems lifetime. That’s equivalent to 722,000 air miles.</p>
+
+      <p>Their average electric bill is now $65</p>
+    </div>
+    <div class="tab-pane" id="case5">
+      <h4>Aptos - Residence Case Study</h4>
+      <table>
+        <tr>
+          <td>Customers needs: Reduce energy bill</td>
+          <td>Existing PG&E bill: $250+/month</td>
+        </tr>
+        <tr>
+          <td>System Size: 3.15kW</td>
+          <td>kWh production: 4,280kWh/year</td>
+        </tr>
+        <tr>
+          <td>Payback: 7.5 years</td>
+          <td>Energy bill with Solar: $60/month</td>
+        </tr>
+      </table>                             
+      
+      <h4>Aptos - Residence Case Study</h4> 
+
+      <%= image_tag("aptos315.jpg", alt: "Aptos Array Image") %>    
+
+      <p>The customers needs were to reduce their PG&E electric bills as they were in excess of $250 per month.</p>
+
+      <p>This system was installed as part of a complete refit and remodel of the home. We liaised with Architects and General Contractor to ensure the system was integrated into the remodel and minimised disruption to the work schedule.</p>
+
+      <p>The remodel included enhancements to energy efficiencies such as insulation and windows thus reducing energy consumption even further.</p>
+
+      <p>The solar pv system installed consisted of 15 210W Schuco solar panels which were roof mounted and faced South.</p>
+
+      <p>These arrays were served by one SMA inverter.</p>
+
+      <p>The system produces in excess of 4,200kWh per year and will reduce carbon emissions by 73 tons over the systems lifetime. </p>
+
+      <p>Their average electric bill is now $60</p>
+    </div>
+    <div class="tab-pane" id="case6">
+      <h4>Sunnyvale - Residence Case Study</h4>
+      <table>
+        <tr>
+          <td>Customers needs: Reduce energy bill</td>
+          <td>Existing PG&E bill: $550+/month</td>
+        </tr>
+        <tr>
+          <td>System Size: 5.4kW</td>
+          <td>kWh production: 7,885kWh/year</td>
+        </tr>
+        <tr>
+          <td>Payback: 5 years</td>
+          <td>Energy bill with Solar: $40/month</td>
+        </tr>
+      </table>                             
+      
+      <p>The customers needs were to reduce their PG&E electric bills as they were in excess of $550 per month.</p> 
+
+      <%= image_tag("sunnyvale514.jpg", alt: "Sunnyvale Array Image") %>                                           
+      <p>Following our site survey and energy analysis we recommended that the customer replace a old very large freezer in his garage. This together with other energy recommendations reduced his energy consumption by 45%. We then sized the system based on the new usage  ($250/month average). ROI including energy efficiencies is less than 5 years!!</p> 
+
+      <p>We also replaced the existing wood shake roof covering with a new composite shingle 50 year TL roof.</p>
+
+      <p>The solar pv system installed consisted of 30# 180W Schuco solar modules. The roof mounted array faced South. This array is served by Schuco SMA inverter.</p>
+
+      <p>The system produces 7,885kWh per year and reduces carbon emissions by 144 tons over the systems lifetime. That's equivalent to over 296,000 air miles or 30 return flights between  San Francisco and London!!</p>
+
+      <p>Their average electric bill is now $40</p>
+
+       <em><p>"For us it is all about securing our families financial future. Solar does this for us as it reduces our outgoings . With the money I am saving on my electric bill this sytem will pay for itself in around 5 years. After that its all free energy!!"</p>
+
+      <p>"I am not sure there are any other investments that will give you around 20% return!!"</p>
+
+      <p>Stan S - Sunnyvale</p></em>
+    </div>
+    <div class="tab-pane" id="case7">
+      <h4>Monterey County - Residence Case Study</h4>
+      <table>
+        <tr>
+          <td>Customers needs: Reduce energy bill</td>
+          <td>Existing PG&E bill: $500+/month</td>
+        </tr>
+        <tr>
+          <td>System Size: 7.13kW</td>
+          <td>kWh production: 9,660kWh/year</td>
+        </tr>
+        <tr>
+          <td>Payback: 4.5 years</td>
+          <td>Energy bill with Solar: $40/month</td>
+        </tr>
+      </table>   
+
+      <p>The customers needs were to reduce their PG&E electric bills, as they were in excess of $500 per month. <p>                         
+
+      <%= image_tag("monterey713.jpg", alt: "Sunnyvale Array Image") %>
+
+      <p>The solar electric (pv) system installed consisted of 31 230W solar panels in two arrays of 22 & 9 panels. The two roof mounted arrays faced South West.</p>
+
+      <p>These arrays were served by two SMA inverters which converted there solar generated power into AC power for use around the home and to spin their meter backwards.</p>
+
+      <p>The system produces 9,660kWh per year and reduces carbon emissions by 167 tons over the systems lifetime. That's equivalent to over planting 6,680 trees.</p>
+
+      <p>Their average electric bill is now $40</p>
+    </div>
+  </div>
+</div>
