Nav Links, removed Ian

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
         <h1>Energy independence</h1>
         <h3>For less than you pay now<h3>
       </div>
-      <p><a class="btn btn-primary btn-lg jumbobtn">Learn more</a></p>
+      <%= link_to 'Learn More', new_user_path, class: 'btn btn-primary btn-lg jumbobtn' %>
     </div>
   </div>
 
@@ -17,7 +17,7 @@
         <h1>Energy independence</h1>
         <h3>For less than you pay now<h3>
       </div>
-      <p><a class="btn btn-primary btn-lg jumbobtn">Learn more</a></p>
+      <%= link_to 'Learn More', new_user_path, class: 'btn btn-primary btn-lg jumbobtn' %>
     </div>
   </div>
 
@@ -27,7 +27,7 @@
         <h1>Energy Independence</h1>
         <h3>For less than you pay now<h3>
       </div>
-      <p><a class="btn btn-primary btn-lg jumbobtn">Learn more</a></p>
+      <%= link_to 'Learn More', new_user_path, class: 'btn btn-primary btn-lg jumbobtn' %>
     </div>
   </div>
 
@@ -37,7 +37,7 @@
         <h1>Energy Independence</h1>
         <h3>For less than you pay now<h3>
       </div>
-      <p><a class="btn btn-primary btn-lg jumbobtn">Learn more</a></p>
+      <%= link_to 'Learn More', new_user_path, class: 'btn btn-primary btn-lg jumbobtn' %>
     </div>
   </div>
 
@@ -47,7 +47,7 @@
         <h1>Energy Independence</h1>
         <h3>For less than you pay now<h3>
       </div>
-      <p><a class="btn btn-primary btn-lg jumbobtn">Learn more</a></p>
+      <%= link_to 'Learn More', new_user_path, class: 'btn btn-primary btn-lg jumbobtn' %>
     </div>
   </div>
 </div>
