--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
       <div class="col-xs-4">
       <h1>Suns Up Solar</h1>
       </div>
-      <button type="button" class="btn btn-info pull-right" id="contact_button">Get In Touch</button>
+      <!-- <button type="button" class="btn btn-info pull-right" id="contact_button">Get In Touch</button> -->
+      <%= link_to 'Get In Touch', about_path, class: 'btn btn-info pull-right', id:'contact_button' %>
+      <%= link_to 'I Want Solar', new_user_path, class: 'btn btn-info pull-right', id:'contact_button' %>
     </div>
   </div>
   <div class"row" id="navbar">
@@ -40,12 +42,12 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-        <li class="active"> <%= link_to 'Home', '#' %>              </li>
-        <li>                <%= link_to 'Learn About Solar', '#' %> </li>
-        <li>                <%= link_to 'Residential', '#' %>       </li>
-        <li>                <%= link_to 'Commercial', '#' %>        </li>
-        <li>                <%= link_to 'About Us', '#' %>          </li>
-        <li>                <%= link_to 'News', '#' %>              </li>
+        <li class="active"> <%= link_to 'Home', root_path %>              </li>
+        <li>                <%= link_to 'Learn About Solar', tech_path %> </li>
+        <li>                <%= link_to 'Residential', residential_path %>       </li>
+        <li>                <%= link_to 'Commercial', commercial_path %>        </li>
+        <li>                <%= link_to 'About Us', about_path %>          </li>
+        <li>                <%= link_to 'News', news_index_path %>              </li>
       </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
@@ -62,32 +64,32 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-3">
-          <h4>Column 1</h4>
+          <h4>Nav Links</h4>
           <ul>
-          <li class="active"> <%= link_to 'Home', '#' %>              </li>
-          <li>                <%= link_to 'Learn About Solar', '#' %> </li>
-          <li>                <%= link_to 'Residential', '#' %>       </li>
-          <li>                <%= link_to 'Commercial', '#' %>        </li>
-          <li>                <%= link_to 'About Us', '#' %>          </li>
-          <li>                <%= link_to 'News', '#' %>              </li>
+          <li class="active"> <%= link_to 'Home', root_path %>              </li>
+          <li>                <%= link_to 'Learn About Solar', tech_path %> </li>
+          <li>                <%= link_to 'Residential', residential_path %></li>
+          <li>                <%= link_to 'Commercial', commercial_path %>  </li>
+          <li>                <%= link_to 'About Us', about_path %>         </li>
+          <li>                <%= link_to 'News', news_index_path %>        </li>
         </ul>
         </div>
         <div class="col-xs-3">
-          <h4>Column 2</h4>
+          <h4>Internal Links</h4>
+          <p><%= link_to 'I Want Solar', new_user_path %></p>
+          <p><%= link_to 'Get In Touch', about_path %></p>
+          <p>links</p>
+          <p>links</p>
+        </div>
+        <div class="col-xs-3">
+          <h4>External Links</h4>
           <p>links</p>
           <p>links</p>
           <p>links</p>
           <p>links</p>
         </div>
         <div class="col-xs-3">
-          <h4>Column 3</h4>
-          <p>links</p>
-          <p>links</p>
-          <p>links</p>
-          <p>links</p>
-        </div>
-        <div class="col-xs-3">
-          <h4>Column 4</h4>
+          <h4>External Links</h4>
           <p>links</p>
           <p>links</p>
           <p>links</p>
